new-dockerfile+k8s is already