@@ -1,6 +1,17 @@
-FROM openjdk:8u262-jre-slim-buster
-ADD ./target/cloud.jar /app/cloud.jar
-ADD runboot.sh /app/
+FROM openjdk:8-jre-alpine
+
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
+
+ENV JAVA_OPTS ''
+
 WORKDIR /app
-RUN chmod a+x runboot.sh
-CMD /app/runboot.sh
+ADD target/cloud_work-0.0.1-SNAPSHOT.jar .
+
+
+ENTRYPOINT ["sh", "-c", "set -e && java -XX:+PrintFlagsFinal \
+                                           -XX:+HeapDumpOnOutOfMemoryError \
+                                           -XX:HeapDumpPath=/heapdump/heapdump.hprof \
+                                           -XX:+UnlockExperimentalVMOptions \
+                                           -XX:+UseCGroupMemoryLimitForHeap \
+                                           $JAVA_OPTS -jar cloud_work-0.0.1-SNAPSHOT.jar"]
